test/classes/jplevyak/record_type_hierarchy-3-error.good
Error: Unresolved call 'f(:C)' (record_type_hierarchy-3-error.chpl:16)
Candidates are:
  f(a: D) (record_type_hierarchy-3-error.chpl:10)
